--- a/src/main/resources/static/create-schedule.html
+++ b/src/main/resources/static/create-schedule.html
@@ -3,37 +3,14 @@
 <head>
     <meta charset='utf-8' />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Edit Schedule</title>
+    <title>Create New Schedule</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script>
-        let scheduleDetails;
+        let serverAddress = '${SERVER_ADDRESS}' || 'localhost';
 
-        async function fetchScheduleDetails(id) {
-            const response = await fetch(`http://localhost:8080/schedule/${id}`);
-            return response.json();
-        }
-
-        async function loadScheduleDetails() {
-            const urlParams = new URLSearchParams(window.location.search);
-            const id = urlParams.get('id');
-
-            if (id) {
-                scheduleDetails = await fetchScheduleDetails(id);
-                document.getElementById('id').value = scheduleDetails.id;
-                document.getElementById('name').value = scheduleDetails.name;
-                document.getElementById('startTime').value = scheduleDetails.startTime;
-                document.getElementById('endTime').value = scheduleDetails.endTime;
-                document.getElementById('finished').checked = scheduleDetails.finished;
-                document.getElementById('memo').value = scheduleDetails.memo;
-                document.getElementById('location').value = scheduleDetails.location;
-                document.getElementById('category').value = scheduleDetails.category;
-            }
-        }
-
-        async function updateSchedule(event) {
+        async function createSchedule(event) {
             event.preventDefault();
-            const updatedSchedule = {
-                id: document.getElementById('id').value,
+            const newSchedule = {
                 name: document.getElementById('name').value,
                 startTime: document.getElementById('startTime').value,
                 endTime: document.getElementById('endTime').value,
@@ -44,34 +21,31 @@
             };
 
             try {
-                const response = await fetch('http://localhost:8080/schedule', {
-                    method: 'PUT',
+                const response = await fetch(`http://${serverAddress}/api/schedule`, {
+                    method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
                     },
-                    body: JSON.stringify(updatedSchedule)
+                    body: JSON.stringify(newSchedule)
                 });
 
                 if (response.ok) {
-                    alert('Schedule updated successfully');
+                    alert('Schedule created successfully');
                     window.close();
                 } else {
-                    alert('Failed to update schedule');
+                    alert('Failed to create schedule');
                 }
             } catch (error) {
                 console.error('Error:', error);
-                alert('An error occurred while updating the schedule');
+                alert('An error occurred while creating the schedule');
             }
         }
-
-        document.addEventListener('DOMContentLoaded', loadScheduleDetails);
     </script>
 </head>
 <body>
 <div class="container mt-5">
-    <h1>Edit Schedule</h1>
-    <form onsubmit="updateSchedule(event)">
-        <input type="hidden" id="id">
+    <h1>Create New Schedule</h1>
+    <form onsubmit="createSchedule(event)">
         <div class="mb-3">
             <label for="name" class="form-label">Name</label>
             <input type="text" class="form-control" id="name" required>
@@ -100,7 +74,7 @@
             <label for="category" class="form-label">Category</label>
             <input type="text" class="form-control" id="category">
         </div>
-        <button type="submit" class="btn btn-primary">Update Schedule</button>
+        <button type="submit" class="btn btn-primary">Create Schedule</button>
     </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
