--- a/src/main/resources/static/edit-schedule.html
+++ b/src/main/resources/static/edit-schedule.html
@@ -3,12 +3,40 @@
 <head>
     <meta charset='utf-8' />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Create New Schedule</title>
+    <title>Edit Schedule</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <script>
-        async function createSchedule(event) {
+        let serverAddress = '${SERVER_ADDRESS}' || 'localhost';
+
+        let scheduleDetails;
+
+        async function fetchScheduleDetails(id) {
+            const response = await fetch(`http://${serverAddress}/api/schedule/${id}`);
+            return response.json();
+        }
+
+        async function loadScheduleDetails() {
+            const urlParams = new URLSearchParams(window.location.search);
+            const id = urlParams.get('id');
+
+            if (id) {
+                scheduleDetails = await fetchScheduleDetails(id);
+                document.getElementById('id').value = scheduleDetails.id;
+                document.getElementById('name').value = scheduleDetails.name;
+                document.getElementById('startTime').value = scheduleDetails.startTime;
+                document.getElementById('endTime').value = scheduleDetails.endTime;
+                document.getElementById('finished').checked = scheduleDetails.finished;
+                document.getElementById('memo').value = scheduleDetails.memo;
+                document.getElementById('location').value = scheduleDetails.location;
+                document.getElementById('category').value = scheduleDetails.category;
+            }
+        }
+
+        async function updateSchedule(event) {
             event.preventDefault();
-            const newSchedule = {
+            const updatedSchedule = {
+                id: document.getElementById('id').value,
                 name: document.getElementById('name').value,
                 startTime: document.getElementById('startTime').value,
                 endTime: document.getElementById('endTime').value,
@@ -19,31 +47,34 @@
             };
 
             try {
-                const response = await fetch('http://localhost:8080/schedule', {
-                    method: 'POST',
+                const response = await fetch(`http://${serverAddress}/api/schedule`, {
+                    method: 'PUT',
                     headers: {
                         'Content-Type': 'application/json',
                     },
-                    body: JSON.stringify(newSchedule)
+                    body: JSON.stringify(updatedSchedule)
                 });
 
                 if (response.ok) {
-                    alert('Schedule created successfully');
+                    alert('Schedule updated successfully');
                     window.close();
                 } else {
-                    alert('Failed to create schedule');
+                    alert('Failed to update schedule');
                 }
             } catch (error) {
                 console.error('Error:', error);
-                alert('An error occurred while creating the schedule');
+                alert('An error occurred while updating the schedule');
             }
         }
+
+        document.addEventListener('DOMContentLoaded', loadScheduleDetails);
     </script>
 </head>
 <body>
 <div class="container mt-5">
-    <h1>Create New Schedule</h1>
-    <form onsubmit="createSchedule(event)">
+    <h1>Edit Schedule</h1>
+    <form onsubmit="updateSchedule(event)">
+        <input type="hidden" id="id">
         <div class="mb-3">
             <label for="name" class="form-label">Name</label>
             <input type="text" class="form-control" id="name" required>
@@ -72,7 +103,7 @@
             <label for="category" class="form-label">Category</label>
             <input type="text" class="form-control" id="category">
         </div>
-        <button type="submit" class="btn btn-primary">Create Schedule</button>
+        <button type="submit" class="btn btn-primary">Update Schedule</button>
     </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
