--- a/src/main/resources/static/schedule-details.html
+++ b/src/main/resources/static/schedule-details.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Schedule Details</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <style>
         body {
             background-color: #f8f9fa;
@@ -22,10 +23,12 @@
         }
     </style>
     <script>
+        let serverAddress = '${SERVER_ADDRESS}' || 'localhost';
+
         let scheduleDetails;
 
         async function fetchScheduleDetails(id) {
-            const response = await fetch(`http://localhost:8080/schedule/${id}`);
+            const response = await fetch(`http://${serverAddress}/api/schedule/${id}`);
             return response.json();
         }
 
@@ -64,7 +67,7 @@
             if (!confirmation) return;
 
             try {
-                const response = await fetch('http://localhost:8080/schedule', {
+                const response = await fetch(`http://${serverAddress}/api/schedule`, {
                     method: 'DELETE',
                     headers: {
                         'Content-Type': 'application/json',
@@ -74,7 +77,7 @@
 
                 if (response.ok) {
                     alert('Schedule deleted successfully');
-                    window.location.href = 'calendar.html'; // Redirect to calendar page
+                    window.location.href = 'index.html'; // Redirect to calendar page
                 } else {
                     alert('Failed to delete schedule');
                 }
